# map4_smartpole_detection_filterer

./: README.md  package.xml  setup.cfg  setup.py
launch/: area_filter.launch.xml
map4_smartpole_detection_filter/: area_filter.py  area_filter_model.py
schema/: area_filter.schema.json
